Fixed alignment on small screens

--- a/style.css
+++ b/style.css
@@ -73,21 +73,6 @@ a {
 	outline: 4px solid var(--clr-background);
 }
 
-.flex-center {
-	display: flex;
-	justify-content: center;
-	gap: 0.5em;
-}
-
-.even-columns {
-	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-}
-
-.centered {
-	text-align: center;
-}
-
 .faded {
 	opacity: 0.6;
 }
@@ -103,6 +88,7 @@ a {
 	place-content: center;
 	height: 90dvh;
 	gap: 1rem;
+	text-align: center;
 }
 
 .hero-indicator {
@@ -136,7 +122,7 @@ a {
 	background: var(--clr-background);
 	background-clip: padding-box;
 	border: 2px solid transparent;
-	border-radius: 1rem;
+	border-radius: 2rem;
 }
 
 .card:before {
@@ -168,6 +154,7 @@ a {
 
 .content-grid {
 	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-	padding-inline: 1rem;
+	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+	padding: 1rem;
+
 }
